--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page">
     <div class="matrix">
-      <img src="./eisenhower-matrix.jpg" class="img-matrix">
+      <img src="./eisenhower-matrix.jpg" class="img-matrix" alt="Eisenhower-matrix">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main-element">
@@ -26,7 +26,7 @@
           <input type="text" class="task">
           <button class="button edit">Edit</button>
           <button class="button delete">
-            <img src="./remove.svg" class="img-button">
+            <img src="./remove.svg" class="img-button" alt=""> 
           </button>
         </li>
         <li class="task-list edit-mode">
@@ -35,7 +35,7 @@
           <input type="text" value="Go Shopping" class="task">
           <button class="button edit">Save</button>
           <button class="button delete">
-            <img src="./remove.svg" class="img-button">
+            <img src="./remove.svg" class="img-button" alt="">
           </button>
         </li>
       </ul>
@@ -47,7 +47,7 @@
           <input type="text" class="task">
           <button class="button edit">Edit</button>
           <button class="button delete">
-            <img src="./remove.svg" class="img-button">
+            <img src="./remove.svg" class="img-button" alt="">
           </button>
         </li>
       </ul>
