--- a/index.html
+++ b/index.html
@@ -6,51 +6,51 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <header class="matrix">
-      <img src="./eisenhower-matrix.jpg" class="img-matrix" alt="Eisenhower-matrix">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <header class="page__header matrix">
+      <img src="./eisenhower-matrix.jpg" class="matrix__img" alt="Eisenhower-matrix">
+      <a class="matrix__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="main-element">
-      <section>
-        <h3 class="new-task-label">Add Item</h3>
-          <div class="task-row">
-            <input id="new-task"class="task" type="text">
-            <button class="button">Add</button>
+    <main class="page__main main">
+      <section class="add_tasks task">
+        <h3 id="new-task-label" class="section__title">Add Item</h3>
+          <div class="task__content">
+            <input id="new-task"class="task__input" type="text">
+            <button class="task__button">Add</button>
          </div>
       </section>
-      <section>
-        <h3 class="title">Todo</h3>
-        <ul id="incomplete-tasks" class="ul">
-          <li class="task-list">
-            <input type="checkbox" class="input-checkbox">
-            <label class="task-label">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="button edit">Edit</button>
-            <button class="button delete">
-              <img src="./remove.svg" class="img-button" alt=""> 
+      <section class="incomplete_tasks task">
+        <h3 class="section__title">Todo</h3>
+        <ul id="incomplete-tasks" class="task__list">
+          <li class="task__item">
+            <input type="checkbox" class="task__input_checkbox">
+            <label class="task__label">Pay Bills</label>
+            <input type="text" class="task__input">
+            <button class="task__button edit">Edit</button>
+            <button class="task__button delete">
+              <img src="./remove.svg" class="button__img" alt=""> 
             </button>
           </li>
-          <li class="task-list edit-mode">
-            <input type="checkbox" class="input-checkbox">
-            <label class="task-label">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="button edit">Save</button>
-            <button class="button delete">
-              <img src="./remove.svg" class="img-button" alt="">
+          <li class="task__item edit-mode">
+            <input type="checkbox" class="task__input_checkbox">
+            <label class="task__label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task__input">
+            <button class="task__button edit">Save</button>
+            <button class="task__button delete">
+              <img src="./remove.svg" class="button__img" alt="">
             </button>
           </li>
         </ul>
       </section>
-      <section>
-        <h3 class="title">Completed</h3>
-        <ul id="completed-tasks" class="ul">
-          <li class="task-list">
-            <input type="checkbox" class="input-checkbox" checked>
-            <label class="task-label">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="button edit">Edit</button>
-            <button class="button delete">
-              <img src="./remove.svg" class="img-button" alt="">
+      <section class="completed_tasks task">
+        <h3 class="section__title">Completed</h3>
+        <ul id="completed-tasks" class="task__list">
+          <li class="task__item">
+            <input type="checkbox" class="task__input_checkbox" checked>
+            <label class="task__label">See the Doctor</label>
+            <input type="text" class="task__input">
+            <button class="task__button edit">Edit</button>
+            <button class="task__button delete">
+              <img src="./remove.svg" class="button__img" alt="">
             </button>
           </li>
         </ul>
